--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "autobind-decorator": "2.4.0",
     "react": "16.5.1",
     "react-dom": "16.5.1",
-    "react-helmet": "5.2.0"
+    "react-redux": "6.0.0",
+    "redux": "4.0.1",
+    "redux-saga": "1.0.1",
+    "typesafe-actions": "3.0.0"
   },
   "devDependencies": {
     "@types/enzyme": "3.1.14",
@@ -27,7 +30,8 @@
     "@types/mocha": "5.2.5",
     "@types/react": "16.4.14",
     "@types/react-dom": "16.0.7",
-    "@types/react-helmet": "5.0.7",
+    "@types/react-redux": "7.0.1",
+    "@types/redux-devtools-extension": "2.13.2",
     "autoprefixer": "9.4.7",
     "chai": "4.1.2",
     "clean-webpack-plugin": "1.0.1",
@@ -56,6 +60,7 @@
     "postcss-nested": "4.1.1",
     "postcss-scss": "2.0.0",
     "postcss-simple-vars": "5.0.1",
+    "redux-devtools-extension": "2.13.8",
     "stylelint": "9.10.1",
     "stylelint-csstree-validator": "1.3.0",
     "stylelint-declaration-use-variable": "1.7.0",
