--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@bem-react/classname": "1.4.3",
     "autobind-decorator": "2.4.0",
+    "axios": "0.18.0",
     "react": "16.5.1",
     "react-dom": "16.5.1",
     "react-redux": "6.0.0",
