--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "build": "webpack --config ./.config/webpack",
     "build:testing": "NODE_ENV=testing npm run build",
     "build:production": "NODE_ENV=production npm run build",
-    "lint": "npm-run-all --parallel --continue-on-error eslint stylelint",
+    "lint": "npm-run-all --parallel --continue-on-error eslint tslint stylelint",
     "eslint": "eslint . $ESLINT_OPTS",
     "stylelint": "sh -c \"stylelint 'src/' $STYLELINT_OPTS\"",
+    "tslint": "tslint 'src/**/*.{ts,tsx}'",
     "unit": "jest --config ./.config/jest/jest.config.json",
     "unit:coverage": "npm run unit -- --coverage",
     "start": "webpack-dev-server --config ./.config/webpack"
@@ -39,9 +40,13 @@
     "css-loader": "2.1.0",
     "enzyme": "3.6.0",
     "enzyme-adapter-react-16": "1.5.0",
-    "eslint": "5.13.0",
+    "eslint": "5.3.0",
+    "eslint-config-airbnb": "17.1.0",
     "eslint-plugin-ascii": "1.0.0",
+    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-jsx-a11y": "6.2.1",
     "eslint-plugin-mocha": "5.2.1",
+    "eslint-plugin-react": "7.12.4",
     "file-loader": "3.0.1",
     "fork-ts-checker-webpack-plugin": "0.5.2",
     "html-webpack-plugin": "3.2.0",
@@ -70,6 +75,9 @@
     "terser-webpack-plugin": "1.2.2",
     "ts-jest": "23.1.4",
     "ts-loader": "5.3.3",
+    "tslint": "^5.10.0",
+    "tslint-eslint-rules": "^5.3.1",
+    "tslint-react": "^3.6.0",
     "typescript": "3.0.3",
     "webpack": "4.29.0",
     "webpack-cli": "3.2.1",
@@ -78,14 +86,9 @@
   "stylelint": {
     "extends": "./.config/stylelintrc.js"
   },
-  "eslintConfig": {
-    "extends": [
-      "./.config/eslintrc.js"
-    ]
-  },
   "eslintIgnore": [
     "build/",
     "__reports/",
-    "!.config/"
+    ".config/"
   ]
 }
